fixes spacing and unnecessary css

--- a/css/footer.css
+++ b/css/footer.css
@@ -15,8 +15,6 @@
     place-self: center;
 }
 
-
-
 .footer_top_right {
     display: grid;
     grid-area: b;
@@ -25,40 +23,39 @@
     "b c d e f"
     "b c d e g";
 }
+
 .footer_nav {
     grid-area: b;
     display: flex;
     flex-direction: column;
     margin: 10px;
 }
+
 .footer_nav_list > a{
     display: inline-block;
     color: black;
 }
+
 .footer_nav_list > a:hover {
     color: #B98663;
     text-decoration: underline;
 }
+
 .footer_nav_list{
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-.location {
+.location_london {
     grid-area: c;
     margin: 10px;
-    /* display: flex;
-    place-self: center; */
 }
 
 .location_dubai {
     grid-area: d;
     margin: 10px;
-    /* display: flex;
-    place-self: center; */
 }
-
 
 .contact_section{
     grid-area: e;
@@ -71,7 +68,6 @@
 }
 
 .footer_headers {
-    /* grid-area: title; */
     display: flex;
     justify-self:first baseline;
 }
@@ -88,9 +84,6 @@
     color: #FFFFFF;
     padding: 15px 0px;
     background-color: #412920;
-    
-    /* background: linear-gradient( #F6DFE1 0%, #EBBEC4 8%, #C48983 30%, #B76E78 50%, transparent 80%),
-    linear-gradient(#B76E78 50%, #C48983 70%, #EBBEC4 100%, #F6DFE1 100%, transparent 10%); */
 }
 
 .footer_bottom > p {
